[gd_scene load_steps=4 format=3 uid="uid://drrjexq6547ow"]

[ext_resource type="Script" path="res://Gadgets/cone_light.gd" id="1_m1gha"]

[sub_resource type="SphereShape3D" id="SphereShape3D_w2mxh"]
radius = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2xgcb"]
radius = 1.0

[node name="OmniLight" type="Area3D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_m1gha")

[node name="SpotLight3D" type="OmniLight3D" parent="."]
light_energy = 3.0
light_specular = 0.0
omni_range = 2.56332

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_w2mxh")

[node name="DeathZone" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathZone"]
shape = SubResource("SphereShape3D_2xgcb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
